Fix Interacions text alignment

--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,11 @@ table tr:nth-child(odd) td{
 .interaction th {
     text-align: left;
 }
+.interaction td {
+    text-align: left;
+    vertical-align: middle;
+}
+
 
 .stimulus_thumbnail  {
     height: 100px;
